2014-05-19  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ca.mo
	include/languages/tr.mo
	include/languages/de.mo
	include/languages/ja.mo
	include/languages/pt_BR.mo
	include/languages/ru.mo
	include/languages/el.mo
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/pt.mo
	include/languages/index.pot
	include/languages/zh_CN.mo
	include/languages/cs.mo
	include/languages/es.mo
	include/languages/en_GB.mo
	include/languages/sk.mo
	include/languages/en.mo
	include/languages/ar.mo
	include/languages/fr.mo: Update languages.

2014-05-17  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_html.php: Fixed the PHP warning.

2014-05-16  Junichi Satoh  <junichi@rworks.jp>

	* include/languages/Makefile: Removed unavailable language files
	from the target. Added '--from-code=UTF-8' to xgettext option to
	avoid errors with non-ascii characters.

2014-05-15  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_ipam.php: Fix bad translations
	on ipam english help 
	
	* extensions/realtime_graphs/ajax.php: Little improvement
	on pending pandora packages for realtime graphs

2014-05-14  Sergio Martin <sergio.martin@artica.es>

	* extensions/realtime_graphs/ajax.php
	extensions/realtime_graphs/realtime_graphs.js
	godmode/agentes/module_manager_editor_network.php: Improvements
	in realtime graphs and snmp walk modal window

2014-05-14  Sergio Martin <sergio.martin@artica.es>

	* extensions/realtime_graphs/ajax.php: Improve the commands of 
	realtime graphs

2014-05-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: fixed "resolution" of custom
	graphs to have the same results of simple graphs when have data
	of more than one month.
	For SF bug #2425

2014-05-13  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/manage_recontask_form.php: Fix a field 
	that wasnt hidden in recon server form when select recon
	script mode.
